tests/ui/wrong_type_id.stderr
error[E0271]: type mismatch resolving `<StringPiece as ExternType>::Id == (f, o, l, l, y, (), S, t, r, i, n, g, P, i, e, c, e)`
   --> $DIR/wrong_type_id.rs:11:1
    |
11  | #[cxx::bridge(namespace = folly)]
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected a tuple with 17 elements, found one with 19 elements
    |
   ::: $WORKSPACE/src/extern_type.rs
    |
    | pub fn verify_extern_type<T: ExternType<Id = Id>, Id>() {}
    |                                         ------- required by this bound in `verify_extern_type`
    |
    = note: expected tuple `(f, o, l, l, y, (), S, t, r, i, n, g, P, i, e, c, e)`
               found tuple `(c, o, r, r, e, c, t, (), S, t, r, i, n, g, P, i, e, c, e)`
